<resources>
    <string name="app_name">ArtAI</string>
    <string name="categories">Categories</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="morning_habits">Morning \n   Habits</string>
    <string name="night_habits">Night \n      Habits</string>
    <string name="around_n_me">Around \n Me</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="password">Password :</string>
    <string name="email">Email :</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="do_you_believe_in_ai">Do you believe in AI....?</string>
    <string name="so_let_s">So let\'s</string>
    <string name="sign_up_as_a_user">Sign up as a User</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="see_this_power_together">See this power together</string>
    <string name="generate_anything_nin_your_mind_now">Generate Anything\nIn Your Mind Now</string>
    <string name="kid_cleaning_the_bed">Kid cleaning the Bed</string>
    <string name="generated_image">Generated Image</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="hi">Hi,</string>
    <string name="name">Name</string>
    <string name="favorite">Favorite</string>
    <string name="saved">Saved</string>
    <string name="sign_out">Sign Out</string>
    <string name="namefield">Name :</string>
    <string name="e_mail">E-mail :</string>
    <string name="passwordField">Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="age">Age</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="done">Done</string>
    <string name="letters">Letters</string>
    <string name="mornig">Mornig</string>
    <string name="habits">Habits</string>
    <string name="night">Night</string>
    <string name="numbers">Numbers</string>
    <string name="shapes">Shapes</string>
    <string name="stories">Stories</string>
    <string name="shortt">Short</string>
    <string name="habit_name">Habit Name</string>
    <string name="habit_description">Habit Description</string>
    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="toggle_favorite">Toggle Favorite</string>
    <string name="login_to_see_favorites">Please log in to see your favorites.</string>
    <string name="no_favorites_yet">You haven\'t added any favorites yet.</string>
    <string name="no_images_found">No images found</string>
    <string name="drawings">Drawings</string>
    <string name="descrip_1">A young boy is sitting up in bed, wrapped in a yellow blanket, as he wakes up in the morning. His bed has a cozy setup with pillows and a purple frame. Waking up marks the start of a new day, and a good morning routine helps improve energy, focus, and productivity.</string>
    <string name="name_1">Setting up your bed</string>
    <string name="name_2">Learning Through Reading</string>
    <string name="welcome_to_our">Welcome To our</string>
    <string name="world">World</string>
    <string name="descrip_2">A boy is sitting on the floor, happily reading a book with a stack of other books beside him. He appears engaged and interested, showing a love for learning. Reading is a great way to gain knowledge, improve language skills, and develop imagination and creativity.</string>
    <string name="name_3">Brushing Teeth for a Healthy Smile</string>
    <string name="name_4">Refreshing Morning Shower</string>
    <string name="name_5">Enjoying a Delicious Meal</string>
    <string name="name_6">Get Dressed</string>
    <string name="descrip_6">A mother is kneeling next to a small child, assisting them in getting dressed in front of an open wardrobe. The shelves contain neatly arranged books and other items. Teaching children how to dress themselves is an important step in their development, promoting independence and self-care skills.</string>
    <string name="descrip_5">A young boy is sitting at a table, excitedly holding a spoon and fork in his hands, ready to enjoy his meal. The table is covered with a purple tablecloth and has various food items, including bread, soup, and juice. Eating well-balanced meals is essential for maintaining good health and energy throughout the day</string>
    <string name="descrip_4">A boy is happily taking a shower, scrubbing his hair with shampoo while covered in bubbles. The showerhead is running, creating a relaxing and refreshing moment. Showering is an important hygiene practice that helps remove dirt, sweat, and germs, keeping the body fresh and clean for the day ahead.</string>
    <string name="descrip_3">A young girl with brown pigtails is standing at the sink, brushing her teeth while holding a cup in her other hand. She is wearing a green t-shirt and appears focused on maintaining good oral hygiene. Brushing teeth is an essential part of daily self-care, helping to keep teeth clean, prevent cavities, and promote fresh breath.</string>
    <string name="name_12">Enjoying a Healthy Dinner</string>
    <string name="name_13">Brushing Teeth Before Bedtime</string>
    <string name="descrip_12">A young girl is sitting at a table, enjoying a healthy dinner that includes fruits, bread, and a bowl of cereal, along with a glass of juice. Eating a well-balanced meal in the evening is important to maintain energy levels and promote restful sleep.</string>
    <string name="descrip_13">A little boy in blue pajamas is brushing his teeth at the sink, making sure his teeth are clean before going to sleep. Good oral hygiene at night helps prevent cavities and keeps teeth strong and healthy.</string>
    <string name="name_14">A Relaxing Shower Before Sleep</string>
    <string name="name_15">Getting Ready for Bed</string>
    <string name="descrip_14">A child is happily taking a shower, covered in bubbles while scrubbing their hair. A warm shower before bed helps to relax the body, wash away the day’s dirt, and prepare for a comfortable night’s sleep</string>
    <string name="descrip_15">A boy is standing in front of an open wardrobe, putting on a cozy scarf, looking content as he prepares for the night. Choosing warm and comfortable sleepwear ensures a peaceful and restful sleep</string>
    <string name="name_21">Sorting and Folding Laundry</string>
    <string name="name_22">Washing Dishes After a Meal</string>
    <string name="descrip_21">A mother and daughter are sorting colorful clothes into a laundry basket. Helping with laundry teaches children the importance of cleanliness and organization in daily life.</string>
    <string name="descrip_22">A young girl and her mother are washing and drying dishes at the sink. Learning to clean up after meals fosters responsibility and good hygiene habits from an early age</string>
    <string name="name_23">Tidying Up the Play Area</string>
    <string name="name_24">Keep the House Clean and Tidy</string>
    <string name="name_25">Cooking Together as a Family</string>
    <string name="name_26">Organizing Closthes in the Closet</string>
    <string name="descrip_23">A little girl is carefully putting her toys into a storage box. Cleaning up after playtime helps children learn the importance of keeping their space neat and clutter-free.</string>
    <string name="descrip_24">A mother and child are dusting furniture and vacuuming the floor. Working together to clean the house encourages teamwork and helps maintain a neat and comfortable living space.</string>
    <string name="descrip_25">A mother and her children are in the kitchen, wearing chef hats and preparing food together. Cooking as a family teaches kids essential life skills while creating fun and memorable moments</string>
    <string name="descrip_26">Two children are happily folding and arranging clothes inside a wardrobe. Keeping clothes neat and organized helps children develop independence and a sense of responsibility.</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="star">Rectangle</string>
    <string name="rhombus">Rhombus</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="vanilla_fruit">Vanilla Fruit</string>
    <string name="yali_pear">Yali Pear</string>
    <string name="ximenia">Ximenia</string>
    <string name="watermelon">Watermelon</string>
    <string name="to">To</string>
    <string name="ugli_fruit">Ugli Fruit</string>
    <string name="strawberry">Strawberry</string>
    <string name="tomato">Tomato</string>
    <string name="raspberry">Raspberry</string>
    <string name="quince">Quince</string>
    <string name="pineapple">Pineapple</string>
    <string name="orange">Orange</string>
    <string name="nectarine">Nectarine</string>
    <string name="lemon">Lemon</string>
    <string name="mango">Mango</string>
    <string name="apple">Apple</string>
    <string name="name_31">Football</string>
    <string name="descrip_31">" Football improves cardiovascular health, builds lower-body strength, enhances coordination and agility, and promotes teamwork and communication skills. It also helps develop discipline and strategic"</string>
    <string name="blueberry">Blueberry</string>
    <string name="coconut">Coconut</string>
    <string name="dragonfruit">DragonFruit</string>
    <string name="elderberry">Elderberry</string>
    <string name="fig">Fig</string>
    <string name="grapefruit">Grapefruit</string>
    <string name="hazelnut">Hazelnut</string>
    <string name="ita_palm">Ita Palm</string>
    <string name="jackfruit">Jackfruit</string>
    <string name="kiwi">Kiwi</string>
    <string name="basketball">Basketball</string>
    <string name="basket_description">A basketball player is soaring through the air for a slam dunk, showing explosive power and agility.\n Basketball is a high-intensity sport that improves cardiovascular health, builds muscular strength, and enhances coordination and balance. It promotes teamwork, quick decision-making, and boosts mental focus while also being a fun and social way to stay active.</string>
    <string name="volleyball">Volleyball</string>
    <string name="volley_description">Two players are jumping high at the net, actively engaged in a competitive volleyball match.\n Volleyball boosts hand-eye coordination, builds upper-body and core strength, improves balance and flexibility, and encourages teamwork. It also enhances quick decision-making and social interaction.</string>
    <string name="handball">Handball</string>
    <string name="hand_descriotion">A handball player is mid-jump, preparing to throw the ball with speed and precision toward the goal.\n Handball is an intense, fast-paced game that increases aerobic fitness, hand-eye coordination, and agility. It strengthens upper and lower body muscles, improves reflexes, and encourages strategic thinking and communication within a team.</string>
    <string name="swimming">Swimming</string>
    <string name="sports">Sports</string>
    <string name="individual_sports">Individual Sports</string>
    <string name="graceful_artistic_sports"><![CDATA[Graceful & Artistic Sports]]></string>
    <string name="material_arts">Material Arts</string>
    <string name="team_sports">Team Sports</string>
</resources>