<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <!-- Title -->

        <!-- Email Field -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/kavoon"
            android:text="@string/login_to_your_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/input_field_bg"
            android:elevation="5dp"
            android:hint="@string/email"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_13ssp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/input_field_bg"
            android:elevation="5dp"
            android:hint="@string/password"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_13ssp" />

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_btn"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/login_btn_gradient"
            android:fontFamily="@font/kavoon"
            android:shadowColor="#C3C3C3"
            android:shadowDx="7"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:backgroundTint="@null" />

        <!-- Social Login Icons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_btn"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/google_logo" />

            <ImageView
                android:id="@+id/facebook_btn"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/facebook_logo" />
        </LinearLayout>

        <!-- Register Link -->
        <TextView
            android:id="@+id/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="Don’t have an account ? Register"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <!-- Continue as Guest Link -->
        <TextView
            android:id="@+id/continue_as_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp" 
            android:text="@string/continue_as_guest" 
            android:textColor="@color/black" 
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
